--- a/index.html
+++ b/index.html
@@ -1,21 +1,28 @@
-<!--index.html-->
-
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8">
-    <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'">
-    <meta http-equiv="X-Content-Security-Policy" content="default-src 'self'; script-src 'self'">
-    <title>Hello World!</title>
+    <meta charset="utf-8">
+    <title>未命名</title>
+  <style type="text/css">
+    body,html{
+        margin:0px;
+        height:100%;
+    }
+    
+    #txtEditor{
+        width:100%;
+        height:100%;
+        padding:0px;
+        margin:0px;
+        border:0px;
+        font-size: 18px;
+    }
+  </style>
   </head>
   <body>
-    <h1>Hello World!</h1>
-    We are using Node.js <span id="node-version"></span>,
-    Chromium <span id="chrome-version"></span>,
-    and Electron <span id="electron-version"></span>.
-
-    <!-- You can also require other files to run in this process -->
-    <script src="./renderer.js"></script>
-  </body>
+  <textarea id="txtEditor"></textarea>
+</body>
+  <script>
+    require('./renderer.js');
+  </script>
 </html>
